# file-sync-py

./: .gitignore  README.md  pyproject.toml
file_sync_py/: run.py  sync.py
file_sync_py/file_sync_py/: sync.py
tests/: test_sync.py
