[tool.poetry]
name = "file_sync_py"
version = "0.1.0"
description = "A Python package for mirroring and syncing two folders in real-time."
authors = ["Lucas Duarte <lucasduarte9120@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^4.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
